# Bachelor_project_mongo_microservice_model

./: .gitignore
docker/: docker-compose.yml
mock_connector_service/: Cargo.toml  build.rs
mock_connector_service/proto/: virk_data.proto
mock_connector_service/src/: db.rs  main.rs  rabbitmq.rs
mock_data_service/: Cargo.toml
mock_data_service/proto/: virk_data.proto
mock_data_service/src/: grpc.rs  main.rs  mongo.rs
mock_updater_service/: Cargo.toml
mock_updater_service/src/: main.rs  rabbitmq.rs
