[package]
name = "mock_connector_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
tonic = "0.10.2"
tokio = { version = "1.35.0", features = ["full"] }
tokio-postgres = "0.7.10"
rand = "0.8.5"
lapin = "2.3.1"
tokio-stream = "0.1.14"
async-once-cell = "0.5.3"
serde_json = "1.0.111"
serde = "1.0.195"

[build-dependencies]
tonic-build = "0.10.2"
