[package]
name = "mock_data_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
prost = "0.12.3"
tonic = "0.10.2"
mongodb = "2.8.0"
serde = "1.0.195"
futures = "0.3.30"
warp = "0.3.6"

[build-dependencies]
tonic-build = "0.10.2"
