[package]
name = "mock_updater_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
prost = "0.12.3"
tonic = "0.10.2"
lapin = "2.3.1"

[build-dependencies]
tonic-build = "0.10.2"
